Spring 	Custom Validation

--- a/SpringSendingMail/src/main/resources/messages.properties
+++ b/SpringSendingMail/src/main/resources/messages.properties
@@ -1,2 +1,3 @@
 hello= hello, world
 signupSuccess= Signup Successful. Please check your mailbox to verify yourself
+emailNotUnique= Email already exists
