--- a/SpringSendingMail/src/main/resources/messages.properties
+++ b/SpringSendingMail/src/main/resources/messages.properties
@@ -8,3 +8,12 @@ verifyEmail= Hi,<br/></br> Your email id at XYZ is unverified. Please click the 
 alreadyVerified= Already verified
 incorrect= Incorrect {0}
 verificationSuccess= Verification success. please login again! 
+
+notFound = Not found
+forgotPasswordSubject = Forgot password?
+checkMailResetPassword = Please check your mail to reset your password.
+forgotPasswordEmail = Please click <a href="{0}">here</a> to reset your password.
+
+passwordsDoNotMatch= Passwords do not match
+invalidForgotPassword= Ivalid link for resetting password
+passwordChanged= Password Changed
